--- a/UniversityApp/UniversityApp.DashboardUI/ClientApp/src/app/register/register/register.component.html
+++ b/UniversityApp/UniversityApp.DashboardUI/ClientApp/src/app/register/register/register.component.html
@@ -29,8 +29,18 @@
                     </div>
                 </div>
                 <div class="row m-t-5">
+                    <div>
+                        <select (change)="changeRole($event)" formControlName="role">
+                            <option value="" disabled>Choose role</option>
+                            <option *ngFor="let role of roles" [value]="role.Id">
+                                {{ role.Id }}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row m-t-5">
                     <div class="col-md-3">
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" (click)="register()" class="btn btn-primary">
                             Register
                         </button>
                     </div>
